--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,43 @@
 services:
-  # SQL Server
+  # ============================================
+  # SQL Server Database
+  # ============================================
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: adres-sqlserver
     environment:
       ACCEPT_EULA: "Y"
-      MSSQL_SA_PASSWORD: "Your_strong_password_123"
-      MSSQL_PID: "Developer"
+      MSSQL_SA_PASSWORD: ${SA_PASSWORD:-YourStrong@Passw0rd}
+      MSSQL_PID: ${MSSQL_PID:-Developer}
     ports:
-      - "1433:1433"
+      - "${SQL_SERVER_PORT:-1433}:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P Your_strong_password_123 -C -Q 'SELECT 1' || exit 1"]
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${SA_PASSWORD:-YourStrong@Passw0rd} -C -Q 'SELECT 1' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 10
       start_period: 60s
     networks:
       - adres-network
+    restart: unless-stopped
 
-  # API ADRES
+  # ============================================
+  # Backend API - ASP.NET Core 8
+  # ============================================
   api:
     build:
       context: ./adres.api
       dockerfile: Dockerfile
     container_name: adres-api
+    env_file:
+      - ./adres.api/.env
     environment:
-      ASPNETCORE_ENVIRONMENT: "Production"
       ASPNETCORE_URLS: "http://+:8080"
-      ConnectionStrings__DefaultConnection: "Server=sqlserver,1433;Database=AdresAuthDb;User ID=sa;Password=Your_strong_password_123;TrustServerCertificate=True;Encrypt=False"
-      # Configuración JWT para testing/desarrollo (sin validación de firma)
-      # TODO: Para producción, configurar AUTH_AUTHORITY, AUTH_AUDIENCE y AUTH_JWKS_URL reales
-      AUTH_USE_JWKS: "false"
-      # AUTH_AUTHORITY: "https://autentic.ejemplo"
-      # AUTH_AUDIENCE: "adres-api"
-      # AUTH_JWKS_URL: "https://autentic.ejemplo/.well-known/jwks.json"
-      # AUTH_PEM_PATH: "Keys/autentic_public.pem"  # Descomentar si usas PEM en vez de JWKS
+      ConnectionStrings__DefaultConnection: "Server=sqlserver,1433;Database=${DB_NAME:-AdresDb};User ID=${DB_USER:-sa};Password=${SA_PASSWORD:-YourStrong@Passw0rd};TrustServerCertificate=True;Encrypt=False"
     ports:
-      - "8080:8080"
+      - "${API_PORT:-8080}:8080"
     depends_on:
       sqlserver:
         condition: service_healthy
@@ -50,6 +49,33 @@ services:
       start_period: 40s
     networks:
       - adres-network
+    restart: unless-stopped
+
+  # ============================================
+  # Frontend - React + Nginx
+  # ============================================
+  web:
+    build:
+      context: ./adres-web
+      dockerfile: Dockerfile
+      args:
+        REACT_APP_API_BASE_URL: ${REACT_APP_API_BASE_URL:-http://localhost:8080/api}
+    container_name: adres-web
+    env_file:
+      - ./adres-web/.env
+    ports:
+      - "${WEB_PORT:-3000}:80"
+    depends_on:
+      - api
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
+    networks:
+      - adres-network
+    restart: unless-stopped
 
 volumes:
   sqlserver_data:
