--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,17 @@ services:
       ACCEPT_EULA: "Y"
       MSSQL_SA_PASSWORD: ${SA_PASSWORD:-YourStrong@Passw0rd}
       MSSQL_PID: ${MSSQL_PID:-Developer}
+      SA_PASSWORD: ${SA_PASSWORD:-YourStrong@Passw0rd}
     ports:
       - "${SQL_SERVER_PORT:-1433}:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${SA_PASSWORD:-YourStrong@Passw0rd} -C -Q 'SELECT 1' || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 60s
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P $$SA_PASSWORD -C -Q 'SELECT 1' || exit 1"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
+      start_period: 90s
     networks:
       - adres-network
     restart: unless-stopped
