--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,14 @@ services:
       - "${SQL_SERVER_PORT:-1433}:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
-    healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -Q 'SELECT 1' -b -o /dev/null"]
-      interval: 15s
-      timeout: 10s
-      retries: 10
-      start_period: 90s
+    # Healthcheck deshabilitado temporalmente para servidores Linux
+    # Si SQL Server inicia correctamente, el healthcheck no es crítico
+    # healthcheck:
+    #   test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -Q 'SELECT 1' -b -o /dev/null"]
+    #   interval: 15s
+    #   timeout: 10s
+    #   retries: 10
+    #   start_period: 90s
     networks:
       - adres-network
     restart: unless-stopped
@@ -40,8 +42,7 @@ services:
     ports:
       - "${API_PORT:-8080}:8080"
     depends_on:
-      sqlserver:
-        condition: service_healthy
+      - sqlserver
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/"]
       interval: 30s
