Fix: Eliminar ConnectionString duplicada en docker-compose.yml - usar solo adres.api/.env

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,13 @@
 *.env
 !.env.staging
 !.env.production
+!.env.server
 !adres-web/.env.staging
 !adres-web/.env.production
+!adres-web/.env.server
+!adres.api/.env.staging
+!adres.api/.env.production
+!adres.api/.env.server
 
 # User-specific files
 *.rsuser
