--- a/adres.api/Dockerfile
+++ b/adres.api/Dockerfile
@@ -16,6 +16,9 @@ RUN dotnet publish "adres.api.csproj" -c Release -o /app/publish /p:UseAppHost=f
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
+# Instalar curl para healthcheck
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Exponer puerto HTTP
 EXPOSE 8080
 
