--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,13 +41,15 @@ services:
     ports:
       - "${API_PORT:-8080}:8080"
     depends_on:
-      - sqlserver
+      sqlserver:
+        condition: service_started
+        restart: true
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 40s
+      retries: 5
+      start_period: 60s
     networks:
       - adres-network
     restart: unless-stopped
