Fix: Actualizar configuraciones para usar HTTPS en dominios y variables de entorno

--- a/.env.server
+++ b/.env.server
@@ -13,8 +13,8 @@ DB_NAME=AdresDb
 DB_USER=sa
 
 # Dominios - SERVIDOR
-FRONTEND_DOMAIN=http://adres-autenticacion.centralspike.com
-BACKEND_DOMAIN=http://adres-autenticacion-back.centralspike.com
+FRONTEND_DOMAIN=https://adres-autenticacion.centralspike.com
+BACKEND_DOMAIN=https://adres-autenticacion-back.centralspike.com
 
 # Frontend Web
 WEB_PORT=3000
