--- a/adres.api/.env.server
+++ b/adres.api/.env.server
@@ -15,7 +15,7 @@ AUTH_USE_JWKS=true
 AUTH_JWKS_URL=https://auth.adres.gov.co/.well-known/jwks.json
 
 # CORS Origins - SERVIDOR
-ALLOWED_CORS=http://adres-autenticacion.centralspike.com,http://adres-autenticacion-back.centralspike.com
+ALLOWED_CORS=https://adres-autenticacion.centralspike.com,https://adres-autenticacion-back.centralspike.com
 
 # Swagger (deshabilitado en producción)
 ENABLE_SWAGGER=false
