Fix: Actualizar configuración de JWT para deshabilitar el uso de JWKS en el simulador mock

--- a/adres.api/.env.server
+++ b/adres.api/.env.server
@@ -9,10 +9,11 @@ ASPNETCORE_ENVIRONMENT=Production
 ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=AdresDb;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True
 
 # JWT Configuration (actualizar con tu auth server real)
+# Para usar el simulador mock, cambiar AUTH_USE_JWKS a false
 AUTH_AUTHORITY=https://auth.adres.gov.co
 AUTH_AUDIENCE=adres-api
-AUTH_USE_JWKS=true
-AUTH_JWKS_URL=https://auth.adres.gov.co/.well-known/jwks.json
+AUTH_USE_JWKS=false
+# AUTH_JWKS_URL=https://auth.adres.gov.co/.well-known/jwks.json
 
 # CORS Origins - SERVIDOR
 ALLOWED_CORS=https://adres-autenticacion.centralspike.com,https://adres-autenticacion-back.centralspike.com
