feat: Integración completa con sistema de autenticación ADRES OAuth2/OpenID Connect

--- a/adres.api/.env.server
+++ b/adres.api/.env.server
@@ -8,17 +8,25 @@ ASPNETCORE_ENVIRONMENT=Production
 # SQL Server (usa el contenedor)
 ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=AdresDb;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True
 
-# JWT Configuration (actualizar con tu auth server real)
-# Para usar el simulador mock, cambiar AUTH_USE_JWKS a false
+# JWT Configuration - ADRES Auth Server
 AUTH_AUTHORITY=https://auth.adres.gov.co
 AUTH_AUDIENCE=adres-api
-AUTH_USE_JWKS=false
-# AUTH_JWKS_URL=https://auth.adres.gov.co/.well-known/jwks.json
+AUTH_USE_JWKS=true
+AUTH_JWKS_URL=https://auth.adres.gov.co/.well-known/jwks.json
+
+# ADRES Authentication Service
+AdresAuth__ServerUrl=https://auth.adres.gov.co
+AdresAuth__ClientId=your-client-id-here
+AdresAuth__ClientSecret=your-client-secret-here
+AdresAuth__TokenEndpoint=/oauth/token
+AdresAuth__JwksEndpoint=/.well-known/jwks.json
+AdresAuth__RevokeEndpoint=/oauth/revoke
+AdresAuth__IntrospectEndpoint=/oauth/introspect
 
 # CORS Origins - SERVIDOR
 ALLOWED_CORS=https://adres-autenticacion.centralspike.com,https://adres-autenticacion-back.centralspike.com
 
-# Swagger (deshabilitado en producción)
+# Swagger
 ENABLE_SWAGGER=false
 
 # Logging
