--- a/adres.api/appsettings.json
+++ b/adres.api/appsettings.json
@@ -7,11 +7,20 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Authority": "https://autentic.ejemplo",
+    "Authority": "https://auth.adres.gov.co",
     "Audience": "adres-api",
     "UseJwks": true,
-    "JwksUrl": "https://autentic.ejemplo/.well-known/jwks.json",
-    "PublicKeyPemPath": "Keys/autentic_public.pem"
+    "JwksUrl": "https://auth.adres.gov.co/.well-known/jwks.json",
+    "PublicKeyPemPath": "Keys/adres_public.pem"
+  },
+  "AdresAuth": {
+    "ServerUrl": "https://auth.adres.gov.co",
+    "ClientId": "your-client-id",
+    "ClientSecret": "your-client-secret",
+    "TokenEndpoint": "/oauth/token",
+    "JwksEndpoint": "/.well-known/jwks.json",
+    "RevokeEndpoint": "/oauth/revoke",
+    "IntrospectEndpoint": "/oauth/introspect"
   },
   "AllowedCors": [
     "http://localhost:4200",
