config: Actualizar integración para Autentic Sign (idp.autenticsign.com) con credenciales reales

--- a/adres.api/.env.server
+++ b/adres.api/.env.server
@@ -8,20 +8,24 @@ ASPNETCORE_ENVIRONMENT=Production
 # SQL Server (usa el contenedor)
 ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=AdresDb;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True
 
-# JWT Configuration - ADRES Auth Server
-AUTH_AUTHORITY=https://auth.adres.gov.co
+# JWT Configuration - Autentic Sign
+AUTH_AUTHORITY=https://idp.autenticsign.com
 AUTH_AUDIENCE=adres-api
 AUTH_USE_JWKS=true
-AUTH_JWKS_URL=https://auth.adres.gov.co/.well-known/jwks.json
+AUTH_JWKS_URL=https://idp.autenticsign.com/.well-known/jwks.json
 
-# ADRES Authentication Service
-AdresAuth__ServerUrl=https://auth.adres.gov.co
-AdresAuth__ClientId=your-client-id-here
-AdresAuth__ClientSecret=your-client-secret-here
-AdresAuth__TokenEndpoint=/oauth/token
+# Autentic Sign Authentication Service
+AdresAuth__ServerUrl=https://idp.autenticsign.com
+AdresAuth__ClientId=410c8553-f9e4-44b8-90e1-234dd7a8bcd4
+AdresAuth__ClientSecret=
+AdresAuth__AuthorizationEndpoint=/connect/authorize
+AdresAuth__TokenEndpoint=/connect/token
 AdresAuth__JwksEndpoint=/.well-known/jwks.json
-AdresAuth__RevokeEndpoint=/oauth/revoke
-AdresAuth__IntrospectEndpoint=/oauth/introspect
+AdresAuth__RevokeEndpoint=/connect/revocation
+AdresAuth__IntrospectEndpoint=/connect/introspect
+AdresAuth__UserInfoEndpoint=/connect/userinfo
+AdresAuth__RedirectUri=https://adres-autenticacion.centralspike.com/auth/callback
+AdresAuth__Scopes=openid extended_profile
 
 # CORS Origins - SERVIDOR
 ALLOWED_CORS=https://adres-autenticacion.centralspike.com,https://adres-autenticacion-back.centralspike.com
