--- a/adres.api/appsettings.json
+++ b/adres.api/appsettings.json
@@ -7,20 +7,24 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Authority": "https://auth.adres.gov.co",
+    "Authority": "https://idp.autenticsign.com",
     "Audience": "adres-api",
     "UseJwks": true,
-    "JwksUrl": "https://auth.adres.gov.co/.well-known/jwks.json",
-    "PublicKeyPemPath": "Keys/adres_public.pem"
+    "JwksUrl": "https://idp.autenticsign.com/.well-known/jwks.json",
+    "PublicKeyPemPath": "Keys/autenticsign_public.pem"
   },
   "AdresAuth": {
-    "ServerUrl": "https://auth.adres.gov.co",
-    "ClientId": "your-client-id",
-    "ClientSecret": "your-client-secret",
-    "TokenEndpoint": "/oauth/token",
+    "ServerUrl": "https://idp.autenticsign.com",
+    "ClientId": "410c8553-f9e4-44b8-90e1-234dd7a8bcd4",
+    "ClientSecret": "",
+    "AuthorizationEndpoint": "/connect/authorize",
+    "TokenEndpoint": "/connect/token",
     "JwksEndpoint": "/.well-known/jwks.json",
-    "RevokeEndpoint": "/oauth/revoke",
-    "IntrospectEndpoint": "/oauth/introspect"
+    "RevokeEndpoint": "/connect/revocation",
+    "IntrospectEndpoint": "/connect/introspect",
+    "UserInfoEndpoint": "/connect/userinfo",
+    "RedirectUri": "https://adres-autenticacion.centralspike.com/auth/callback",
+    "Scopes": "openid extended_profile"
   },
   "AllowedCors": [
     "http://localhost:4200",
