--- a/adres.api/.env.development.example
+++ b/adres.api/.env.development.example
@@ -1,21 +1,25 @@
 # ===============================================
-# ADRES AUTHENTICATION - DEVELOPMENT
+# AUTENTIC SIGN AUTHENTICATION - DEVELOPMENT
 # ===============================================
 
-# ADRES Auth Server Configuration
-AdresAuth__ServerUrl=https://auth-dev.adres.gov.co
-AdresAuth__ClientId=adres-api-dev
-AdresAuth__ClientSecret=your-dev-client-secret-here
-AdresAuth__TokenEndpoint=/oauth/token
+# Autentic Sign Auth Server Configuration
+AdresAuth__ServerUrl=https://idp.autenticsign.com
+AdresAuth__ClientId=410c8553-f9e4-44b8-90e1-234dd7a8bcd4
+AdresAuth__ClientSecret=
+AdresAuth__AuthorizationEndpoint=/connect/authorize
+AdresAuth__TokenEndpoint=/connect/token
 AdresAuth__JwksEndpoint=/.well-known/jwks.json
-AdresAuth__RevokeEndpoint=/oauth/revoke
-AdresAuth__IntrospectEndpoint=/oauth/introspect
+AdresAuth__RevokeEndpoint=/connect/revocation
+AdresAuth__IntrospectEndpoint=/connect/introspect
+AdresAuth__UserInfoEndpoint=/connect/userinfo
+AdresAuth__RedirectUri=http://localhost:3000/auth/callback
+AdresAuth__Scopes=openid extended_profile
 
 # JWT Configuration
-AUTH_AUTHORITY=https://auth-dev.adres.gov.co
+AUTH_AUTHORITY=https://idp.autenticsign.com
 AUTH_AUDIENCE=adres-api
 AUTH_USE_JWKS=true
-AUTH_JWKS_URL=https://auth-dev.adres.gov.co/.well-known/jwks.json
+AUTH_JWKS_URL=https://idp.autenticsign.com/.well-known/jwks.json
 
 # SQL Server
 ConnectionStrings__DefaultConnection=Server=localhost,1433;Database=AdresAuthDb;User ID=sa;Password=Your_strong_password_123;TrustServerCertificate=True;Encrypt=False
