feat: Add callback-handler endpoint for testing mode (fixes redirect_uri mismatch)

--- a/adres.api/.env.server
+++ b/adres.api/.env.server
@@ -24,10 +24,8 @@ AdresAuth__JwksEndpoint=/.well-known/jwks.json
 AdresAuth__RevokeEndpoint=/connect/revocation
 AdresAuth__IntrospectEndpoint=/connect/introspect
 AdresAuth__UserInfoEndpoint=/connect/userinfo
-# Para testing: usar callback del backend
-# Para producción: usar callback del frontend
-AdresAuth__RedirectUri=https://adres-autenticacion-back.centralspike.com/api/AdresAuth/callback
-# AdresAuth__RedirectUri=https://adres-autenticacion.centralspike.com/auth/callback
+# Redirect URI DEBE coincidir con el registrado en Autentic Sign
+AdresAuth__RedirectUri=https://adres-autenticacion.centralspike.com/auth/callback
 AdresAuth__FrontendUrl=https://adres-autenticacion.centralspike.com
 AdresAuth__Scopes=openid extended_profile
 
