fix: Actualizar URL de JWKS para la configuración de autenticación

--- a/adres.api/.env.server
+++ b/adres.api/.env.server
@@ -12,7 +12,7 @@ ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=AdresDb;User
 AUTH_AUTHORITY=https://idp.autenticsign.com
 AUTH_AUDIENCE=adres-api
 AUTH_USE_JWKS=true
-AUTH_JWKS_URL=https://idp.autenticsign.com/.well-known/jwks.json
+AUTH_JWKS_URL=https://idp.autenticsign.com/.well-known/openid-configuration/jwks
 
 # Autentic Sign Authentication Service
 AdresAuth__ServerUrl=https://idp.autenticsign.com
@@ -20,7 +20,7 @@ AdresAuth__ClientId=410c8553-f9e4-44b8-90e1-234dd7a8bcd4
 AdresAuth__ClientSecret=
 AdresAuth__AuthorizationEndpoint=/connect/authorize
 AdresAuth__TokenEndpoint=/connect/token
-AdresAuth__JwksEndpoint=/.well-known/jwks.json
+AdresAuth__JwksEndpoint=/.well-known/openid-configuration/jwks
 AdresAuth__RevokeEndpoint=/connect/revocation
 AdresAuth__IntrospectEndpoint=/connect/introspect
 AdresAuth__UserInfoEndpoint=/connect/userinfo
